adding readme and predictive modeling

--- a/length_of_stay_synthesis.ipynb
+++ b/length_of_stay_synthesis.ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on some EDA and early modeling I did, I decided to simulate patient outcome based off of parameters from literature. I decided to simulate length of stay, so I dropped everything in the data frame that wasn't room spatial features."
+    "Based on some EDA and early modeling I did, I decided to simulate patient outcome based off of parameters from literature. I decided to simulate length of stay, so I dropped everything in the data frame that wasn't room spatial features. I also changed titles to `snake_case`."
    ]
   },
   {
@@ -1442,7 +1442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:insight] *",
+   "display_name": "Python [conda env:insight]",
    "language": "python",
    "name": "conda-env-insight-py"
   },
